<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#d9ffca">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
        <TextView
                android:id="@+id/currentCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/currentCity"
                android:textColor="@android:color/black"
                android:drawableLeft="@drawable/hint"
                android:clickable="true"
                android:layout_weight="0" android:layout_gravity="center" android:gravity="center_horizontal"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1" android:layout_gravity="center">
                <TextView
                        android:id="@+id/textView_t"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textView_t"
                        android:textSize="20dp"
                        android:textColor="@android:color/black"/>
                <TextView
                        android:id="@+id/textView_tDegrees"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textView_tDegrees"
                        android:textColor="@android:color/black"/>
                <TextView
                        android:id="@+id/textView_tWing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textView_tWing"
                        android:textColor="@android:color/black"/>
                <TextView
                        android:id="@+id/textView_tPressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textView_tPressure"
                        android:textColor="@android:color/black"/>
                <TextView
                        android:id="@+id/textView_tRelHum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textView_tRelHum"
                        android:textColor="@android:color/black"/>
            </LinearLayout>
            <ImageView
                    android:id="@+id/imageCurrent"
                    android:src="@drawable/_255_na"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/contentDesc" android:layout_gravity="center_vertical"
                    android:layout_weight="1"/>
            <ImageButton
                    android:id="@+id/buttonRefresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/refresh"
                    android:paddingRight="10dp"
                    android:contentDescription="@string/contentDesc" android:layout_gravity="center_vertical"
                    android:layout_weight="1" android:background="#d9ffca"/>
        </LinearLayout>
        <TextView
                android:id="@+id/lastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unvalid"
                android:layout_gravity="center_horizontal" android:textColor="@android:color/black"/>
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" android:layout_marginBottom="10dp">
            <TextView
                    android:id="@+id/day1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dip"
                    android:gravity="center"
                    android:text="Сегодня" android:textColor="@android:color/black"/>
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/id1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp"
                        android:drawableTop="@drawable/_255_na"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"/>
                <TextView
                        android:id="@+id/id2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp"
                        android:drawableTop="@drawable/_255_na"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"/>
                <TextView
                        android:id="@+id/id3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp"
                        android:drawableTop="@drawable/_255_na"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"/>
                <TextView
                        android:id="@+id/id4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp"
                        android:drawableTop="@drawable/_255_na"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"/>
            </LinearLayout>
            <TextView
                    android:id="@+id/day2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dip"
                    android:gravity="center"
                    android:text="Завтра" android:textColor="@android:color/black"/>
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/id5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp"
                        android:drawableTop="@drawable/_255_na"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"/>
                <TextView
                        android:id="@+id/id6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp"
                        android:drawableTop="@drawable/_255_na"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"/>
                <TextView
                        android:id="@+id/id7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp"
                        android:drawableTop="@drawable/_255_na"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"/>
                <TextView
                        android:id="@+id/id8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp"
                        android:drawableTop="@drawable/_255_na"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"/>
            </LinearLayout>
            <TextView
                    android:id="@+id/day3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dip"
                    android:gravity="center"
                    android:text="Послезавтра" android:textColor="@android:color/black"/>
            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/id9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp"
                        android:drawableTop="@drawable/_255_na"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"/>
                <TextView
                        android:id="@+id/id10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp"
                        android:drawableTop="@drawable/_255_na"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"/>
                <TextView
                        android:id="@+id/id11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp"
                        android:drawableTop="@drawable/_255_na"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"/>
                <TextView
                        android:id="@+id/id12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp"
                        android:drawableTop="@drawable/_255_na"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
